--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "scripts": {
     "repos": "node index.js --repos -n JavaScript -a 10 && node index.js --repos -n Python -a 10 && node index.js --repos -n Java -a 10",
     "issues": "node index.js --issues",
+    "posts": "node index.js --posts",
     "mine": "node index.js"
   },
   "dependencies": {
